Fix body overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,6 +66,7 @@ body {
  body, html {
   width: 100vw;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
  .d-flex {
